# agentic-campaign-mgmt-v2

./: .env.example  .gitignore  README.md  SCHEMA_MIGRATION_SUMMARY.md  pyproject.toml  render.yaml  requirements.txt  table_columns.csv
backend/: SCHEDULER_README.md  scheduler.py  update_schedule.py
backend/cli/: CLI_COMMANDS.md  __init__.py  comments.py  content.py  insights.py  main.py  news_events.py  planner.py  publish.py  trends.py  ungrounded.py  verifier.py
backend/config/: __init__.py  business_asset_loader.py  guardrails_config.py  prompts.py  settings.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  business_asset.py  comments.py  insights.py  media.py  planner.py  posts.py  seeds.py  social_media.py  sources.py  tasks.py  verifier.py
backend/services/: insights_context_builder.py  insights_fetcher.py
backend/tools/: __init__.py  engagement_tools.py  facebook_scraper_tools.py  instagram_scraper_tools.py  knowledge_base_tools.py  media_generation_tools.py
backend/utils/: __init__.py  async_helpers.py  exceptions.py  (+2 more)
docs/: IMPLEMENTATION_STATUS.md
fb-webhook/: index.js  package.json
frontend/: README.md  package.json  tailwind.config.js
scripts/: README_RLS.md  apply_migration_022.py  cleanup_orphaned_tasks.py  condense.py  delete_orphaned_tasks.sql  dump_columns.sql  full_pipeline.py  gemini_structured_output.py  migrate_content_seed_ids.py  move_schedule.py  override_verification.py  publish_pending.py  refresh_all_insights.py  retry_failed_verifications.py  run_migrations.py  seed_test_data.py  setup_database.py  setup_read_only_anon.py  setup_read_only_anon_policies.sql  test_video_understanding.py  upload_business_assets.py
(+190 files in other folders)
